fixed issue in chrome where body overflows vertically due to 1px border

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 
 .App-logo {
